--- a/MTYD/CarlosSignUp.xaml
+++ b/MTYD/CarlosSignUp.xaml
@@ -106,6 +106,16 @@
                         BackgroundColor="#FF8500"
                         Clicked="SignUpNewUser">
                     </Button>
+                    <Button
+                        Text="◀ Back"
+                        TextColor="White"
+                        CornerRadius="5"
+                        BorderColor="LightGray"
+                        BorderWidth="1"
+                        HeightRequest="40"
+                        BackgroundColor="#FFF0C6"
+                        Clicked="BackClick">
+                    </Button>
                 </StackLayout>
             </ScrollView>
         </StackLayout>
