--- a/MTYD/ViewModel/VerifyInfo.xaml
+++ b/MTYD/ViewModel/VerifyInfo.xaml
@@ -4,7 +4,7 @@
     <ScrollView>
         <StackLayout x:Name="StackL" BackgroundColor="White">
 
-            <AbsoluteLayout>
+            <!--<AbsoluteLayout>
 
                 <BoxView x:Name="orangeBox" BackgroundColor="#FF9E19" 
                         Margin="0, -100, 0, 0"
@@ -22,7 +22,20 @@
                 <ImageButton x:Name="menu" Source="menu.png" HeightRequest="40" WidthRequest="40"
                                 AbsoluteLayout.LayoutBounds="0.07, 0.15" Scale="0.8"
                                 AbsoluteLayout.LayoutFlags="PositionProportional" Clicked="clickedMenu"/>
-            </AbsoluteLayout>
+            </AbsoluteLayout>-->
+
+            <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    
+                    <BoxView x:Name="orangeBox" BackgroundColor="#FF9E19" HorizontalOptions="Fill"/>
+                    <Label x:Name="heading" Text="VERIFY INFO" FontAttributes="Bold" VerticalOptions="End" HorizontalTextAlignment="Center" TextColor="Black"/>
+                    <ImageButton x:Name="pfp" BackgroundColor="LightGray" VerticalOptions="End" HorizontalOptions="End" Clicked="clickedPfp"/>
+                    <Label x:Name="initials" TextColor="Black" FontAttributes="Bold" VerticalOptions="End"  HorizontalOptions="End"/>
+                    <ImageButton x:Name="menu" Source="menu2.png" VerticalOptions="End" HorizontalOptions="Start" BackgroundColor="Transparent" Clicked="clickedMenu"/>
+
+                </Grid>
 
             <Label x:Name="spacer" HeightRequest="5"/>
 
